--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -20,7 +20,7 @@
   {% endfor %}
 
   {% if paginator.next_page %}
-    <a class="ml-1 mr-1" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}"> &raquo;</a>
+    <a class="ml-1 mr-1" href="{{ paginator.next_page_path | replace: '//', '/' }}"> &raquo;</a>
   {% else %}
     <span> &raquo;</span>
   {% endif %}
