--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ disqus: false
 archive: false
 post_class: post-template
 ---
-
+<meta property="og:image" content="assets/images/dodge.jpg" />
 <div class="entry-header">
     <!-- Post Title -->
     <h1 class="posttitle">{{ page.title }}</h1>
